--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ### your site title here
-title: Xinyue (Evelyn) Zhao
+title: Xinyue (Evelyn) Zhao / 赵歆悦
 description: Postdoctoral Scholar at Vanderbilt University
 
 # baseurl: "" #name of GitHub repository
