--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 ### your site title here
 title: Xinyue (Evelyn) Zhao / 赵歆悦
-description: Postdoctoral Scholar at Vanderbilt University
+description: Assistant Professor in Mathematics
 
 # baseurl: "" #name of GitHub repository
 # url: "" #custom url to be used instead of GitHub repository
-# email: xinyue.zhao@vanderbilt.edu
+# email: xzhao45@utk.edu
 
 # highlighter: rouge
 # markdown: kramdown
